tests/snapshots/execution_spec__with-args-url.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  user(id: Int!): User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/{{args.id}}")
}

type User {
  id: Int
  name: String
}
