tests/snapshots/execution_spec__with-nesting.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "posts": [
          {
            "title": "title1"
          },
          {
            "title": "title2"
          },
          {
            "title": "title3"
          }
        ]
      }
    }
  }
}
