tests/snapshots/execution_spec__with-nesting.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Post {
  body: String
  id: Int
  title: String
  userId: Int
}

type Query {
  user: User
}

scalar Url

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  posts: [Post]
  username: String!
  website: String
}

schema {
  query: Query
}
