tests/snapshots/execution_spec__with-nesting.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  userId: Int
}

type Query {
  user: User @http(path: "/users/1")
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  posts: [Post] @http(path: "/users/{{value.id}}/posts")
  username: String!
  website: String
}
